--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "code-format": "prettier --check './**/*.{js,jsx,ts,tsx,css,md,json}' --config ./.prettierrc",
+    "code-format:fix": "prettier --write './**/*.{js,jsx,ts,tsx,css,md,json}' --config ./.prettierrc"
   },
   "dependencies": {
     "next": "12.0.1",
@@ -19,7 +21,9 @@
     "autoprefixer": "^10.4.0",
     "eslint": "7.32.0",
     "eslint-config-next": "12.0.1",
+    "eslint-config-prettier": "^8.3.0",
     "postcss-preset-env": "^6.7.0",
+    "prettier": "^2.4.1",
     "tailwindcss": "^2.2.19",
     "typescript": "4.4.4"
   }
