--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "eslint": "7.32.0",
     "eslint-config-next": "12.0.1",
     "eslint-config-prettier": "^8.3.0",
+    "postcss": "^8.3.11",
     "postcss-preset-env": "^6.7.0",
     "prettier": "^2.4.1",
     "tailwindcss": "^2.2.19",
